--- a/style.css
+++ b/style.css
@@ -7,3 +7,14 @@ h1{
 .name_highlight{
     color: rgb(248, 3, 3);
 }
+
+.half-width{
+    width: 35%;
+    /* display: inline-block; */
+    float: left;
+    margin: 5%;
+    padding: 2%;
+}
+.half-width img{
+    width: 100%;
+}
