--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body{
+    margin: 0;
     font-family: 'Inter', sans-serif;
+}
+:root{
+    --primaryColor: rgb(248, 3, 3);
 }
 h1{
     font-size: 50px;
 }
 .name_highlight{
-    color: rgb(248, 3, 3);
+    color: var(--primaryColor);
 }
 
 .half-width{
@@ -17,4 +21,21 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+
+section{
+    height: 500px;
+}
+
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, rgb(249, 101, 101), var(--primaryColor));
+    padding: 10px 20px;
+    color: white;
+    border-radius: 7px;
+    font-weight: 700;
 }
