--- a/style.css
+++ b/style.css
@@ -1,26 +1,31 @@
+:root{
+    --primaryColor: rgb(248, 3, 3);
+}
 body{
     margin: 0;
     font-family: 'Inter', sans-serif;
 }
-:root{
-    --primaryColor: rgb(248, 3, 3);
-}
 h1{
     font-size: 50px;
 }
-.name_highlight{
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+.red_highlight{
     color: var(--primaryColor);
 }
 
 .half-width{
     width: 35%;
-    /* display: inline-block; */
     float: left;
     margin: 5%;
     padding: 2%;
 }
 .half-width img{
-    width: 100%;
+    width: 70%;
 }
 .top-banner{
     background-image: url(images/top-banner.png);
@@ -28,14 +33,40 @@ h1{
 }
 
 section{
-    height: 500px;
+    height:100vh;
 }
 
 .link-button{
     text-decoration: none;
-    background-image: linear-gradient(45deg, rgb(249, 101, 101), var(--primaryColor));
+    background-image: linear-gradient(45deg, rgb(252, 113, 113), var(--primaryColor));
     padding: 10px 20px;
     color: white;
     border-radius: 7px;
     font-weight: 700;
+}
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 7px;
+    height: 50%;
+    background-color: rgb(248, 246, 246);
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(252, 113, 113), var(--primaryColor));
+    border-image-slice: 1;
+}
+#junior-level{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,rgb(17, 134, 244),rgb(17, 44, 249));
+    border-image-slice: 1;
 }
